--- a/styles/larger.css
+++ b/styles/larger.css
@@ -22,7 +22,7 @@ header span {
 }
 
 nav {
-    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 1rem 1rem;
