--- a/styles/base.css
+++ b/styles/base.css
@@ -11,39 +11,38 @@ nav a {
     padding: 0.5rem;
 }
 
-/* Styling for smaller screens */
-@media (max-width: 767px) {
+@media (max-width: 1170px) {
     nav {
-        flex-direction: column; /* Vertical layout for smaller screens */
-        align-items: flex-start; /* Align items at the start */
-        margin-top: 0; /* Adjust margin */
-        padding: 1rem; /* Adjust padding */
-        background: none; /* Remove background color */
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 0;
+        padding: 1rem;
+        background: none;
     }
     
     nav a {
-        padding: 0.5rem 0; /* Adjust padding for vertical layout */
+        padding: 0.5rem 0;
     }
 
     header img {
-        width: 89px; /* Adjust image size for smaller screens */
+        width: 89px;
     }
 
     header span {
-        margin-bottom: -5%; /* Adjust margin */
+        margin-bottom: -5%;
     }
 
     main h1 {
         font-size: 21px;
-        grid-column: 1; /* Adjust grid layout */
-        margin-top: -5%; /* Adjust margin */
+        grid-column: 1;
+        margin-top: -5%;
     }
 
     .card {
-        font-size: 16px; /* Adjust font size */
+        font-size: 16px;
     }
 
     .card h2 {
-        font-size: 18px; /* Adjust font size */
+        font-size: 18px;
     }
 }
