--- a/styles/larger.css
+++ b/styles/larger.css
@@ -5,8 +5,10 @@
 }
 
 header {
-    display: grid;
+    display: flex;
+    align-items: center;
     font-family: 'Roboto', sans-serif;
+    justify-content: flex-start;
 }
 
 img {
@@ -15,7 +17,7 @@ img {
 }
 
 header span {
-    font-size: 21px;
+    font-size: 13px;
     font-weight: bold;
     text-align: center;
     grid-column: 1/3;
@@ -26,6 +28,7 @@ nav {
     justify-content: center;
     align-items: center;
     padding: 1rem 1rem;
+    margin-left: 1rem;
     margin-top: -13%;
     background: gainsboro;
 }
