--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,7 +1,7 @@
-*body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+#mode{
+    font-size: 30px;
+    cursor: pointer;
 }
 
 header {
@@ -9,6 +9,12 @@ header {
     align-items: center;
     font-family: 'Roboto', sans-serif;
     justify-content: flex-start;
+}
+
+*body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 img {
@@ -23,7 +29,16 @@ header span {
     grid-column: 1/3;
 }
 
+nav a {
+    text-decoration: none;
+    color: black;
+    font-size: 21px;
+    padding: 0.5rem;
+}
+
+
 nav {
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -47,7 +62,8 @@ main {
     font-family: 'Roboto', sans-serif;
     margin-top: 5%;
     padding: 5rem;
-    gap: 34px;
+    margin: auto;
+    gap: 21px;
 }
 
 main h1 {
@@ -59,12 +75,12 @@ main h1 {
 
 .card {
     display: grid;
-    padding: 20px;
+    padding: 20px 1rem;
     border-radius: 5px;
-    background: gainsboro;
+    background: rgb(0, 166, 226);
 }
 
-footer{
+footer {
     padding: 0.5rem 1rem;
     font-family: 'Roboto', sans-serif;
     background: gainsboro;
@@ -72,4 +88,21 @@ footer{
 
 footer p {
     text-align: center;
+}
+
+@media screen and (min-width: 1170px) {
+
+    #menu {
+        display: none;
+    }
+
+
+    .navigation {
+        flex-direction: row;
+    }
+
+    .navigation a {
+        display: block;
+        flex: 1 1 100%;
+    }
 }
