--- a/styles/base.css
+++ b/styles/base.css
@@ -67,6 +67,14 @@
     .card h2 {
         font-size: 18px;
     }
+
+    body {
+        justify-content: space-between;
+    }
+
+    footer{
+        padding: 1rem;
+    }
 }
 
 @media screen and (max-width: 518px) {
