--- a/styles/larger.css
+++ b/styles/larger.css
@@ -17,6 +17,10 @@ header {
     box-sizing: border-box;
 }
 
+body {
+    justify-content: space-between;
+}
+
 img {
     border-radius: 50%;
     margin-left: 8%;
@@ -91,6 +95,8 @@ footer p {
     text-align: center;
 }
 
+
+
 @media screen and (min-width: 1170px) {
 
     #menu {
@@ -105,5 +111,10 @@ footer p {
     .navigation a {
         display: block;
         flex: 1 1 100%;
+    }
+
+    body{
+        justify-content: space-between;
+        min-height: 100vh;
     }
 }
