--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -81,6 +81,21 @@ div a:hover {
     transform: translateX(5px);
 }
 
+#mode{
+    font-size: 30px;
+    padding: 0.5rem;
+    background: rgb(255, 255, 255);
+    border-radius: 34px;
+    cursor: pointer;
+    margin: 8px;
+    margin-top: 13px;
+}
+
+#mode:hover{
+    transition: all .55s ease;
+    transform:translateX(5px);
+}
+
 /*---- "MAIN" ----*/
 main {
     display: flex;
@@ -96,6 +111,12 @@ h1{
     font-family: 'Roboto', sans-serif;
     font-size: 21px;
     color: rgb(68, 68, 68);
+}
+
+
+h3{
+    font-family: 'Roboto', sans-serif;
+    grid-area: 1/3;
 }
 
 /*---- "FOOTER" ----*/
