--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -69,6 +69,9 @@
         border-radius: 21px;
     }
 
+    #mode{
+        padding: 0.21px;
+    }
 
     section{
         flex-direction: column;
