--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -116,7 +116,12 @@ h1{
 
 h3{
     font-family: 'Roboto', sans-serif;
-    grid-area: 1/3;
+    grid-column: 1/3;
+}
+
+p{
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 8px;
 }
 
 /*---- "FOOTER" ----*/
@@ -131,15 +136,23 @@ footer {
 .content-1,
 .content-2,
 .content-3 {
-    display: flex;
+    display: grid;
     padding: 1rem;
     margin: 1rem;
     border-radius: 8px;
     background: whitesmoke;
+    justify-content: center;
+    align-items: center;
 }
 
 article {
+    display: block;
+    max-width: 265px;
     padding: 1rem;
     background: rgb(232, 232, 232);
     border-radius: 8px;
+}
+
+section img{
+    border-radius: 13px;
 }
