--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -12,12 +12,13 @@
     }
 
     .navalist.open {
-        display: flex; /* Affichez quand ouvert */
+        display: flex;
+        /* Affichez quand ouvert */
         flex-direction: column;
         align-items: center;
     }
 
-    nav a{
+    nav a {
         display: block;
         justify-content: center;
         padding: 10px;
@@ -38,7 +39,8 @@
     /* HEADER DISPOSITION */
 
     header img {
-        width: 200px; /* Default width */
+        width: 200px;
+        /* Default width */
     }
 
     header {
@@ -50,10 +52,14 @@
     /* DIV a */
     .left-side {
         display: flex;
-        flex-direction: row; /* Aligner les éléments horizontalement */
-        justify-content: flex-start; /* Alignement à gauche */
-        align-items: center; /* Aligner verticalement au centre */
-        gap: 13px; /* Espacement entre les éléments */
+        flex-direction: row;
+        /* Aligner les éléments horizontalement */
+        justify-content: flex-start;
+        /* Alignement à gauche */
+        align-items: center;
+        /* Aligner verticalement au centre */
+        gap: 13px;
+        /* Espacement entre les éléments */
         padding: 0.1rem;
         border-radius: 21px;
         background: gainsboro;
@@ -69,17 +75,42 @@
         border-radius: 21px;
     }
 
-    #mode{
+    #mode {
         font-size: 28px;
         padding: 0.21px;
     }
 
-    section{
+    section {
         flex-direction: column;
     }
 
-    section img{
+    section img {
         width: 300px;
         height: 130px;
+    }
+
+    .content-1,
+    .content-2,
+    .content-3,
+    .weather {
+        display: block;
+        padding: 1rem;
+        margin: 1rem;
+        border-radius: 8px;
+        background: whitesmoke;
+        justify-content: center;
+        align-items: center;
+    }
+
+    article {
+        display: block;
+        max-width: 265px;
+        padding: 1rem;
+        background: rgb(232, 232, 232);
+        border-radius: 8px;
+    }
+
+    section img {
+        border-radius: 13px;
     }
 }
