--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -138,6 +138,21 @@ footer {
     color: white;
 }
 
+.cta-link {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+    color: #a70000;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.cta-link:hover {
+    background-color: #f3ebeb;
+}
+
 /*---- "SECTION" and "CONTENTS" "ARTICLE"----*/
 .content-1,
 .content-2,
