--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -1,3 +1,14 @@
+:root {
+    --back: rgb(144, 0, 0);
+    --back2: rgba(144, 0, 0, 0.409);
+    --foredark: hsla(0, 0%, 10%, 1);
+    --forelight: hsla(0, 0%, 100%, 1);
+    --border: hsla(0, 0%, 20%, .8);
+    --borderlight: hsla(0, 0%, 33%, .3);
+    --shadow: hsl(0, 0%, 50%);
+    --zebra: hsl(0, 0%, 93%, 1);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -297,3 +308,105 @@ section img {
     display: block;
     font-style: italic;
 }
+
+/*------------ TABLE ------------*/
+table {
+    margin: 10px;
+    border: thin solid var(--border);
+    box-shadow: 0 0 10px var(--shadow);
+    border-collapse: collapse;
+}
+
+caption {
+    padding: 10px;
+    caption-side: bottom;
+    color: var(--back);
+    font-size: .85rem;
+}
+
+tr:first-child th,
+.highlight {
+    background-color: var(--back);
+    color: var(--forelight);
+}
+
+th,
+td {
+    padding: 7px 15px;
+    border: 1px solid var(--borderlight);
+}
+
+th {
+    background-color: var(--back2);
+    font-size: larger;
+}
+
+td {
+    text-align: center;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: var(--zebra);
+}
+
+
+/*---------- FORM STYLING ----------*/
+/* Form layout and styling */
+form {
+    max-width: 55rem;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+form fieldset {
+    margin: 2rem;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    padding: 1rem 5rem;
+}
+
+form legend {
+    color: var(--back);
+    padding: 0 .5rem;
+}
+
+form label {
+    display: block;
+    color: #9c2c13;
+    padding-top: 1rem;
+    font-size: 18px;
+}
+
+form div {
+    padding: 1rem;
+    color: #445ba9;
+}
+
+form input[type="text"],
+form input[type="password"],
+form input[type="email"] {
+    background-color: #f8f8f8ee;
+    display: block;
+    border: 1px solid #d9d9d9;
+    border-radius: .75rem;
+    color: #555;
+    width: 13rem;
+    padding: .8rem;
+    max-width: 400px;
+    appearance: none;
+    margin-bottom: 1rem;
+}
+
+.form input[type="submit"] {
+    border: none;
+    border-radius: 5%;
+    color: white;
+    padding: 1rem 2rem;
+    background-image: linear-gradient(#9c2c13, #6f200e)
+}
+
+
+
