--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -408,3 +408,36 @@ form input[type="email"] {
     padding: 1rem 2rem;
     background-image: linear-gradient(#9c2c13, #6f200e)
 }
+
+
+/* -------------- List and Grid Members  -------------  */
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 5px;
+    align-items: center;
+}
+
+.grid article {
+    text-align: center;
+}
+
+.list {
+    display: flex;
+    flex-direction: column;
+}
+
+.list article {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    margin: 0;
+    padding: 0.25rem;
+}
+
+.list article img {
+    display: none;
+}
+
+.list article:nth-child(even) {
+    background-color: #bed;
+}
