--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -408,12 +408,15 @@ form input[type="email"] {
     padding: 1rem 2rem;
     background-image: linear-gradient(#9c2c13, #6f200e)
 }
-
+/*--------- TOGLE VIEW ---------*/
 
 #toggleView {
     padding: 10px 20px;
     margin: 20px 0;
+    border: none;
     border-radius: 8px;
+    color: white;
+    background: var(--back);
     cursor: pointer;
 }
 
