--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -411,6 +411,7 @@ form input[type="email"] {
 /*--------- TOGLE VIEW ---------*/
 
 #toggleView {
+    font-family: Arial, Helvetica, sans-serif;
     padding: 10px 20px;
     margin: 20px 0;
     border: none;
