--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -262,7 +262,7 @@ section img {
     background: rgb(226, 226, 226);
 }
 
-.head-nav{
+.head-nav {
     display: block;
     flex-wrap: wrap;
     padding: 1rem 1rem;
@@ -408,12 +408,14 @@ form input[type="email"] {
     padding: 1rem 2rem;
     background-image: linear-gradient(#9c2c13, #6f200e)
 }
+
 /*--------- TOGLE VIEW ---------*/
 
 #toggleView {
     font-family: Arial, Helvetica, sans-serif;
     padding: 10px 20px;
     margin: 20px 0;
+    letter-spacing: 3px;
     border: none;
     border-radius: 8px;
     color: white;
@@ -442,7 +444,9 @@ form input[type="email"] {
     margin-bottom: 10px;
 }
 
-.member h3, .member h4, .member p {
+.member h3,
+.member h4,
+.member p {
     margin: 10px 0;
 }
 
