--- a/styles/larger.css
+++ b/styles/larger.css
@@ -111,6 +111,12 @@ main h1 {
 	font-family:"Great Vibes", serif;
 }
 
+#map{
+    width: 100%;
+    height: 100%;
+    margin: 21px 0;
+}
+
 footer {
     padding: 0.5rem;
     margin-top: 1.5rem;
